fix mobile filter buton z-index

--- a/styles/ProductList.module.scss
+++ b/styles/ProductList.module.scss
@@ -48,7 +48,7 @@
     // padding: 0;
     box-shadow: none;
     transition: all 0.5s ease-out;
-    z-index: 9999;
+    z-index: 99;
   }
 
   .openFilters.closed {
